--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,30 +1,26 @@
 {
   "onboarding": {
-    "message": "Welcome to obytes app site"
+    "message": "Welcome to Min Store app site"
   },
   "settings": {
     "about": "About",
     "app_name": "App Name",
-    "arabic": "Arabic",
     "dark": "Dark",
     "english": "English",
     "generale": "General",
-    "github": "Github",
     "language": "Language",
     "light": "Light",
     "links": "Links",
     "logout": "Logout",
     "more": "More",
     "privacy": "Privacy Policy",
-    "rate": "Rate",
-    "share": "Share",
     "support": "Support",
-    "support_us": "Support Us",
     "terms": "Terms of Service",
     "theme": "Theme",
     "title": "Settings",
     "version": "Version",
+    "vi": "VietNam",
     "website": "Website"
   },
-  "welcome": "Welcome to obytes app site"
+  "welcome": "Welcome to Min Store app site"
 }
